--- a/postservice.properties
+++ b/postservice.properties
@@ -1,6 +1,6 @@
 
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/users?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/posts?useSSL=false
 spring.datasource.username=root
 # spring.datasource.password=123456
 
